# doi_common

./: README.md  pyproject.toml
src/: doi_common.py
src/doi_common/: doi_common.py  tester.py
tests/: test_dois.py  test_orcid.py  test_project_map.py  test_suporg.py
