[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "doi_common"
version = "1.0.5"
authors = [
  { name="Rob Svirskas", email="svirskasr@hhmi.org" },
]
description = "Library of common DOI-related functions for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JaneliaSciComp/doi_common"
